# Scalable_User_Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bench_runner.sh  docker-compose.prod.yml  docker-compose.yml  locustfile.py  main.py  pyproject.toml  setup_test_data.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1f62cffa500a_crate_users_table.py
app/: config.py  main.py
app/api/: user.py
app/core/: logging.py  metrics.py  rate_limit.py  security.py
app/db/: database.py  redis.py
app/middleware/: logging.py  metrics.py
app/models/: user.py
app/schemas/: user.py
app/services/: cache.py  email_provider.py  event_publisher.py  user_service.py
app/tasks/: celery_app.py  email.py
docker/: start.sh
docs/: load-testing.md
infra/: azure-destroy.sh  azure-setup.sh  cloud-init-loadgen.yml  cloud-init-server.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: user-service.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
tests/: conftest.py  test_auth.py
