[project]
name = "scalable-user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "email-validator>=2.0.0",
    "fastapi>=0.136.0",
    "pydantic-settings>=2.0.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
    "passlib[bcrypt]>=1.7.4",
    "greenlet>=3.4.0",
    "bcrypt<5",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
]
